--- a/services (1).html
+++ b/services (1).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> رسالة لكل عاشق </title>
+    <title> فرصة العمر </title>
 </head>
 <style>
     
